testdata/valid/let_09.lisp
(defcolumns (A :i16) (B :i16))
(defconstraint c1 ()
  (let ((C B))
    (let ((C C))
      (if (== 0 A)
          (== 0 C)))))
